# miscomp-issue

./: CHANGELOG.md  README.md
.github/workflows/: ci.yml
crates/: README.md
crates/gui/src/: primary.rs  settings.rs
crates/miscomp-issue/: Cargo.toml
crates/miscomp-issue-mobile/: Cargo.toml  build.rs
crates/miscomp-issue-mobile/src/: lib.rs
crates/miscomp-issue/src/: cli.rs  log.rs  main.rs
crates/shared/src/: env.rs
pack/android/apk/: AndroidManifest.xml.zr-rp
pack/deb/: miscomp-issue.deb.zr-shf
pack/deb/miscomp-issue/usr/share/applications/: miscomp-issue.desktop.zr-rp
pack/deb/miscomp-issue/usr/share/man/man1/: miscomp-issue.1.gz.zr-sh
pack/macos/: miscomp-issue.dmg.zr-shf
pack/macos/miscomp-issue.app/Contents/: info.plist.zr-rp
pack/portable-tar/: miscomp-issue.tar.gz.zr-shf
res/: README.md
res/l10n/en-US/: primary_win.ftl
res/l10n/pt-BR/: primary_win.ftl
tools/cargo-do/src/: help.rs  main.rs  pack_deb.rs  util.rs
tools/cargo-zng-res/: Cargo.toml
