[package]
name = "miscomp-issue-mobile"
version = "0.1.0"
edition = "2021"
license = "TODO"
[package.metadata.zng.about]
app = "miscomp-issue"
org = "Zng Project"
qualifier = "rs.zng"

[lib]
# required by Android
crate-type = ["cdylib"]

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
zng = { workspace = true, features = ["view", "android_native_activity"] }

# log
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
default = ["dev"]
dev = []
release = []
