[package]
name = "miscomp-issue"
version = "0.1.0"
edition = "2021"
license = "TODO"
[package.metadata.zng.about]
app = "miscomp-issue"
org = "Zng Project"
qualifier = "rs.zng"

[dependencies]
zng = { workspace = true, features = ["view"] }

# log
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
default = ["dev"]
dev = []
release = []
